force-app/main/default/objects/Product_Additional_Form_Data__c/Product_Additional_Form_Data__c.object-meta.xml
<CustomObject>
    <label>Product Renewal Form Data</label>
    <nameField>
        <displayFormat>PF-{00000000}</displayFormat>
        <label>מידע לטופס חידוש מוצר</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Renewal Form Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>