force-app/main/default/objects/Product_Additional_Form_Data__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Product Renewal Form Data</relationshipLabel>
    <relationshipName>Product_Renewal_Form_Data</relationshipName>
    <type>Lookup</type>
</CustomField>