force-app/main/default/objects/Product_Additional_Form_Data__c/fields/Applicant_Name_Change__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Name_Change__c</fullName>
    <label>Applicant Name Change</label>
    <length>255</length>
    <type>Text</type>
</CustomField>