force-app/main/default/objects/Product_Additional_Form_Data__c/fields/Archiitect_Statotory__c.field-meta.xml
<CustomField>
    <fullName>Archiitect_Statotory__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Archiitect Statotory</label>
    <type>Checkbox</type>
</CustomField>