force-app/main/default/objects/Product_Additional_Form_Data__c/fields/Architect_Adrichalut_Lebnia__c.field-meta.xml
<CustomField>
    <fullName>Architect_Adrichalut_Lebnia__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Architect Adrichalut Lebnia</label>
    <type>Checkbox</type>
</CustomField>