force-app/main/default/objects/Product_Additional_Form_Data__c/fields/Architect_Adrichalut_Lebnia_Above_12_Flo__c.field-meta.xml
<CustomField>
    <fullName>Architect_Adrichalut_Lebnia_Above_12_Flo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Architect Adrichalut Lebnia Above 12 Flo</label>
    <type>Checkbox</type>
</CustomField>