force-app/main/default/objects/Product_Additional_Form_Data__c/fields/Architect_Binyanim_Leshimur__c.field-meta.xml
<CustomField>
    <fullName>Architect_Binyanim_Leshimur__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Architect Binyanim Leshimur</label>
    <type>Checkbox</type>
</CustomField>