force-app/main/default/objects/Product_Additional_Form_Data__c/fields/Architect_Bitsua_Responsibility__c.field-meta.xml
<CustomField>
    <fullName>Architect_Bitsua_Responsibility__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Architect Bitsua Responsibility</label>
    <type>Checkbox</type>
</CustomField>