force-app/main/default/objects/Product_Additional_Form_Data__c/fields/Architect_Bnia_Yeruka__c.field-meta.xml
<CustomField>
    <fullName>Architect_Bnia_Yeruka__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Architect Bnia Yeruka</label>
    <type>Checkbox</type>
</CustomField>