force-app/main/default/objects/Product_Additional_Form_Data__c/fields/Architect_Echut_Hasviva__c.field-meta.xml
<CustomField>
    <fullName>Architect_Echut_Hasviva__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Architect Echut Hasviva</label>
    <type>Checkbox</type>
</CustomField>