force-app/main/default/objects/Product_Additional_Form_Data__c/fields/Architect_Else_Details__c.field-meta.xml
<CustomField>
    <fullName>Architect_Else_Details__c</fullName>
    <label>Architect Else Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>