force-app/main/default/objects/Product_Additional_Form_Data__c/fields/Architect_Gazei_Karka__c.field-meta.xml
<CustomField>
    <fullName>Architect_Gazei_Karka__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Architect Gazei Karka</label>
    <type>Checkbox</type>
</CustomField>