force-app/main/default/objects/Product_Additional_Form_Data__c/fields/Architect_Gsharim_Veminhur__c.field-meta.xml
<CustomField>
    <fullName>Architect_Gsharim_Veminhur__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Architect Gsharim Veminhur</label>
    <type>Checkbox</type>
</CustomField>