force-app/main/default/objects/Product_Additional_Form_Data__c/fields/Architect_Handasat_Echut__c.field-meta.xml
<CustomField>
    <fullName>Architect_Handasat_Echut__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Architect Handasat Echut</label>
    <type>Checkbox</type>
</CustomField>