force-app/main/default/objects/Product_Additional_Form_Data__c/fields/Architect_Havat_Daat__c.field-meta.xml
<CustomField>
    <fullName>Architect_Havat_Daat__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Architect Havat Daat</label>
    <type>Checkbox</type>
</CustomField>