force-app/main/default/objects/Product_Additional_Form_Data__c/fields/Architect_Itsuv_Pnim__c.field-meta.xml
<CustomField>
    <fullName>Architect_Itsuv_Pnim__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Architect Itsuv Pnim</label>
    <type>Checkbox</type>
</CustomField>