force-app/main/default/objects/Product_Additional_Form_Data__c/fields/Architect_Maim_And_Reashim__c.field-meta.xml
<CustomField>
    <fullName>Architect_Maim_And_Reashim__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Architect Maim And Reashim</label>
    <type>Checkbox</type>
</CustomField>