force-app/main/default/objects/Product_Additional_Form_Data__c/fields/Architect_Mitaar_Vebinui_Arim__c.field-meta.xml
<CustomField>
    <fullName>Architect_Mitaar_Vebinui_Arim__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Architect Mitaar Vebinui Arim</label>
    <type>Checkbox</type>
</CustomField>