force-app/main/default/objects/Product_Additional_Form_Data__c/fields/Architect_Mitkanei_Mishakim__c.field-meta.xml
<CustomField>
    <fullName>Architect_Mitkanei_Mishakim__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Architect Mitkanei Mishakim</label>
    <type>Checkbox</type>
</CustomField>