force-app/main/default/objects/Product_Additional_Form_Data__c/fields/Architect_Nihul_Veteum_Projects__c.field-meta.xml
<CustomField>
    <fullName>Architect_Nihul_Veteum_Projects__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Architect Nihul Veteum Projects</label>
    <type>Checkbox</type>
</CustomField>