force-app/main/default/objects/Product_Additional_Form_Data__c/fields/Architect_Nof_Veganim__c.field-meta.xml
<CustomField>
    <fullName>Architect_Nof_Veganim__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Architect Nof Veganim</label>
    <type>Checkbox</type>
</CustomField>