force-app/main/default/objects/Product_Additional_Form_Data__c/fields/Architect_Pikuach_Tsamud__c.field-meta.xml
<CustomField>
    <fullName>Architect_Pikuach_Tsamud__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Architect Pikuach Tsamud</label>
    <type>Checkbox</type>
</CustomField>