force-app/main/default/objects/Product_Additional_Form_Data__c/fields/Architect_Programot__c.field-meta.xml
<CustomField>
    <fullName>Architect_Programot__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Architect Programot</label>
    <type>Checkbox</type>
</CustomField>