force-app/main/default/objects/Product_Additional_Form_Data__c/fields/Architect_Spa__c.field-meta.xml
<CustomField>
    <fullName>Architect_Spa__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Architect Spa</label>
    <type>Checkbox</type>
</CustomField>