force-app/main/default/objects/Product_Additional_Form_Data__c/fields/Architect_TAMA_38__c.field-meta.xml
<CustomField>
    <fullName>Architect_TAMA_38__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Architect TAMA 38</label>
    <type>Checkbox</type>
</CustomField>