force-app/main/default/objects/Product_Additional_Form_Data__c/fields/Architect_Teum_Ben_Maarachot__c.field-meta.xml
<CustomField>
    <fullName>Architect_Teum_Ben_Maarachot__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Architect Teum Ben Maarachot</label>
    <type>Checkbox</type>
</CustomField>