force-app/main/default/objects/Product_Additional_Form_Data__c/fields/Architect_Tichnun_Itstadions__c.field-meta.xml
<CustomField>
    <fullName>Architect_Tichnun_Itstadions__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Architect Tichnun Itstadions</label>
    <type>Checkbox</type>
</CustomField>