force-app/main/default/objects/Product_Additional_Form_Data__c/fields/Architect_Yoets_Negishut__c.field-meta.xml
<CustomField>
    <fullName>Architect_Yoets_Negishut__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Architect Yoets Negishut</label>
    <type>Checkbox</type>
</CustomField>