force-app/main/default/objects/Product_Additional_Form_Data__c/fields/Business_Activities__c.field-meta.xml
<CustomField>
    <fullName>Business_Activities__c</fullName>
    <label>Business Activities</label>
    <type>TextArea</type>
</CustomField>