force-app/main/default/objects/Product_Additional_Form_Data__c/fields/Change_Industry__c.field-meta.xml
<CustomField>
    <fullName>Change_Industry__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Change Industry</label>
    <type>Checkbox</type>
</CustomField>