force-app/main/default/objects/Product_Additional_Form_Data__c/fields/Changes_In_Ownership_Details__c.field-meta.xml
<CustomField>
    <fullName>Changes_In_Ownership_Details__c</fullName>
    <label>Changes In Ownership Details</label>
    <type>TextArea</type>
</CustomField>