force-app/main/default/objects/Product_Additional_Form_Data__c/fields/Changes_In_Ownership_Last_Year__c.field-meta.xml
<CustomField>
    <fullName>Changes_In_Ownership_Last_Year__c</fullName>
    <label>Changes In Ownership Last Year</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>כן</fullName>
            </value>
            <value>
                <fullName>לא</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>