force-app/main/default/objects/Product_Additional_Form_Data__c/fields/Claim_Reported_To_Insurer__c.field-meta.xml
<CustomField>
    <fullName>Claim_Reported_To_Insurer__c</fullName>
    <label>Claim Reported To Insurer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>כן</fullName>
            </value>
            <value>
                <fullName>לא</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>