force-app/main/default/objects/Product_Additional_Form_Data__c/fields/Company_Changed_Auditing_Firm_Details__c.field-meta.xml
<CustomField>
    <fullName>Company_Changed_Auditing_Firm_Details__c</fullName>
    <label>Company Changed Auditing Firm Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>