force-app/main/default/objects/Product_Additional_Form_Data__c/fields/Company_Changed_Auditing_Firm_Last_Year__c.field-meta.xml
<CustomField>
    <fullName>Company_Changed_Auditing_Firm_Last_Year__c</fullName>
    <label>Company Changed Auditing Firm Last Year</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>