force-app/main/default/objects/Product_Additional_Form_Data__c/fields/Country_In_Which_Insurance_Is_Needed__c.field-meta.xml
<CustomField>
    <fullName>Country_In_Which_Insurance_Is_Needed__c</fullName>
    <label>Country In Which Insurance Is Needed</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>