force-app/main/default/objects/Product_Additional_Form_Data__c/fields/Desired_Liability_Limit__c.field-meta.xml
<CustomField>
    <fullName>Desired_Liability_Limit__c</fullName>
    <label>Desired Liability Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>