force-app/main/default/objects/Product_Additional_Form_Data__c/fields/Desired_Liability_Limit_As_Text__c.field-meta.xml
<CustomField>
    <fullName>Desired_Liability_Limit_As_Text__c</fullName>
    <label>Desired Liability Limit As Text</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>475,000</fullName>
            </value>
            <value>
                <fullName>820,000</fullName>
            </value>
            <value>
                <fullName>1,250,000</fullName>
            </value>
            <value>
                <fullName>2,400,000</fullName>
            </value>
            <value>
                <fullName>3,600,000</fullName>
            </value>
            <value>
                <fullName>4,750,000</fullName>
            </value>
            <value>
                <fullName>9,500,000</fullName>
            </value>
            <value>
                <fullName>אחר</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>