force-app/main/default/objects/Product_Additional_Form_Data__c/fields/Desired_Liability_Limit_If_Else__c.field-meta.xml
<CustomField>
    <fullName>Desired_Liability_Limit_If_Else__c</fullName>
    <label>Desired Liability Limit If Else</label>
    <length>50</length>
    <type>Text</type>
</CustomField>