force-app/main/default/objects/Product_Additional_Form_Data__c/fields/Do_Acquisition_or_Merger_Last_Year_Det__c.field-meta.xml
<CustomField>
    <fullName>Do_Acquisition_or_Merger_Last_Year_Det__c</fullName>
    <label>Do Acquisition or Merger Last Year Det</label>
    <length>255</length>
    <type>Text</type>
</CustomField>