force-app/main/default/objects/Product_Additional_Form_Data__c/fields/Do_Change_In_Employees_Number_Reason__c.field-meta.xml
<CustomField>
    <fullName>Do_Change_In_Employees_Number_Reason__c</fullName>
    <label>Do Change In Employees Number Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>