force-app/main/default/objects/Product_Additional_Form_Data__c/fields/Do_Company_Considering_Acquisition_Det__c.field-meta.xml
<CustomField>
    <fullName>Do_Company_Considering_Acquisition_Det__c</fullName>
    <label>Do Company Considering Acquisition Det</label>
    <length>255</length>
    <type>Text</type>
</CustomField>