force-app/main/default/objects/Product_Additional_Form_Data__c/fields/Do_Company_Has_Debts_Details__c.field-meta.xml
<CustomField>
    <fullName>Do_Company_Has_Debts_Details__c</fullName>
    <label>Do Company Has Debts Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>