force-app/main/default/objects/Product_Additional_Form_Data__c/fields/Do_Company_Has_Enough_Cash__c.field-meta.xml
<CustomField>
    <fullName>Do_Company_Has_Enough_Cash__c</fullName>
    <label>Do Company Has Enough Cash</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>