force-app/main/default/objects/Product_Additional_Form_Data__c/fields/Do_Company_Has_Positive_equity_Details__c.field-meta.xml
<CustomField>
    <fullName>Do_Company_Has_Positive_equity_Details__c</fullName>
    <label>Do Company Has Positive equity Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>