force-app/main/default/objects/Product_Additional_Form_Data__c/fields/Do_Company_Turnover_North_America__c.field-meta.xml
<CustomField>
    <fullName>Do_Company_Turnover_North_America__c</fullName>
    <label>Do Company Turnover North America</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>