force-app/main/default/objects/Product_Additional_Form_Data__c/fields/DO_Complete_final_form__c.field-meta.xml
<CustomField>
    <fullName>DO_Complete_final_form__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DO Complete final form</label>
    <type>Checkbox</type>
</CustomField>