force-app/main/default/objects/Product_Additional_Form_Data__c/fields/Do_Current_Insurer__c.field-meta.xml
<CustomField>
    <fullName>Do_Current_Insurer__c</fullName>
    <label>Do Current Insurer</label>
    <length>150</length>
    <type>Text</type>
</CustomField>