force-app/main/default/objects/Product_Additional_Form_Data__c/fields/Do_Current_Investigations_Details__c.field-meta.xml
<CustomField>
    <fullName>Do_Current_Investigations_Details__c</fullName>
    <label>Do Current Investigations Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>