force-app/main/default/objects/Product_Additional_Form_Data__c/fields/Do_Current_Liability_Limit__c.field-meta.xml
<CustomField>
    <fullName>Do_Current_Liability_Limit__c</fullName>
    <label>Do Current Liability Limit</label>
    <length>30</length>
    <type>Text</type>
</CustomField>