force-app/main/default/objects/Product_Additional_Form_Data__c/fields/Do_Current_Premium__c.field-meta.xml
<CustomField>
    <fullName>Do_Current_Premium__c</fullName>
    <label>Do Current Premium</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>