force-app/main/default/objects/Product_Additional_Form_Data__c/fields/Do_Desired_Liablity_Limit_As_Text__c.field-meta.xml
<CustomField>
    <fullName>Do_Desired_Liablity_Limit_As_Text__c</fullName>
    <label>Do Desired Liablity Limit As Text</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2,500,000</fullName>
            </value>
            <value>
                <fullName>5,000,000</fullName>
            </value>
            <value>
                <fullName>7,500,000</fullName>
            </value>
            <value>
                <fullName>10,000,000</fullName>
            </value>
            <value>
                <fullName>Above 10,000,000</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>