force-app/main/default/objects/Product_Additional_Form_Data__c/fields/Do_Directors_Or_Executive_Replaced_Reaso__c.field-meta.xml
<CustomField>
    <fullName>Do_Directors_Or_Executive_Replaced_Reaso__c</fullName>
    <label>Do Directors Or Executive Replaced Reaso</label>
    <length>255</length>
    <type>Text</type>
</CustomField>