force-app/main/default/objects/Product_Additional_Form_Data__c/fields/Do_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Do_Expiration_Date__c</fullName>
    <label>Do Expiration Date</label>
    <type>Date</type>
</CustomField>