force-app/main/default/objects/Product_Additional_Form_Data__c/fields/DO_Figures_Dated__c.field-meta.xml
<CustomField>
    <fullName>DO_Figures_Dated__c</fullName>
    <label>DO Figures Dated</label>
    <type>Date</type>
</CustomField>