force-app/main/default/objects/Product_Additional_Form_Data__c/fields/Do_Investors_Funds_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Do_Investors_Funds_Picklist__c</fullName>
    <label>Do Investors Funds Picklist</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>