force-app/main/default/objects/Product_Additional_Form_Data__c/fields/Do_Investors_Funds_Picklist_Details__c.field-meta.xml
<CustomField>
    <fullName>Do_Investors_Funds_Picklist_Details__c</fullName>
    <label>Do Investors Funds Picklist Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>