force-app/main/default/objects/Product_Additional_Form_Data__c/fields/Do_Is_Policyholder_publicly_Details__c.field-meta.xml
<CustomField>
    <fullName>Do_Is_Policyholder_publicly_Details__c</fullName>
    <label>Do Is Policyholder publicly Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>