force-app/main/default/objects/Product_Additional_Form_Data__c/fields/Do_Is_Policyholder_publicly_List__c.field-meta.xml
<CustomField>
    <fullName>Do_Is_Policyholder_publicly_List__c</fullName>
    <label>Do Is Policyholder publicly List</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>