force-app/main/default/objects/Product_Additional_Form_Data__c/fields/Do_Knowledge_Of_Any_Risk_Details__c.field-meta.xml
<CustomField>
    <fullName>Do_Knowledge_Of_Any_Risk_Details__c</fullName>
    <label>Do Knowledge Of Any Risk Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>