force-app/main/default/objects/Product_Additional_Form_Data__c/fields/Do_Number_Of_Employees_The_Rest__c.field-meta.xml
<CustomField>
    <fullName>Do_Number_Of_Employees_The_Rest__c</fullName>
    <label>Do Number Of Employees The Rest</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>