force-app/main/default/objects/Product_Additional_Form_Data__c/fields/Do_Present_Investigation_Details__c.field-meta.xml
<CustomField>
    <fullName>Do_Present_Investigation_Details__c</fullName>
    <label>Do Present Investigation Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>