force-app/main/default/objects/Product_Additional_Form_Data__c/fields/Do_Refusal_For_Insurance_Details__c.field-meta.xml
<CustomField>
    <fullName>Do_Refusal_For_Insurance_Details__c</fullName>
    <label>Do Refusal For Insurance Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>