force-app/main/default/objects/Product_Additional_Form_Data__c/fields/DO_Send_for_final_signature__c.field-meta.xml
<CustomField>
    <fullName>DO_Send_for_final_signature__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DO Sent final form</label>
    <type>Checkbox</type>
</CustomField>