force-app/main/default/objects/Product_Additional_Form_Data__c/fields/Do_Total_Asset_of_Company__c.field-meta.xml
<CustomField>
    <fullName>Do_Total_Asset_of_Company__c</fullName>
    <label>Do Total Asset of Company</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>