force-app/main/default/objects/Product_Additional_Form_Data__c/fields/Do_Total_gross_assets_in_the_USA__c.field-meta.xml
<CustomField>
    <fullName>Do_Total_gross_assets_in_the_USA__c</fullName>
    <label>Do Total gross assets in the USA</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>