force-app/main/default/objects/Product_Additional_Form_Data__c/fields/Do_total_investments_raised__c.field-meta.xml
<CustomField>
    <fullName>Do_total_investments_raised__c</fullName>
    <label>Do total investments raised</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>