force-app/main/default/objects/Product_Additional_Form_Data__c/fields/Events_To_Be_Sued_For_Details__c.field-meta.xml
<CustomField>
    <fullName>Events_To_Be_Sued_For_Details__c</fullName>
    <label>Events To Be Sued For Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>