force-app/main/default/objects/Product_Additional_Form_Data__c/fields/First_Date_Of_Professional_Insurance__c.field-meta.xml
<CustomField>
    <fullName>First_Date_Of_Professional_Insurance__c</fullName>
    <label>First Date Of Professional Insurance</label>
    <type>Date</type>
</CustomField>